--- a/public/css/style.css
+++ b/public/css/style.css
@@ -486,14 +486,14 @@ ul.navbar-bawah li a {
   .header img.segitiga:nth-child(2) {
     display: block;
     width: 100%;
-    height: 60%;
+    height: 100%;
     z-index: 1;
     position: absolute;
     right: 0;
     bottom: 0;
   }
   .header .wi {
-    top: 75vh;
+    top: 60%;
     right: 5%;
   }
   .header .wi h1 {
